apps/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: rg-aks-test # replace with your main RG
    service.beta.kubernetes.io/azure-load-balancer-ip: "9.163.30.195"     # replace with Argo CD IP
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
